<?xml version="1.0" encoding="utf-8"?>
<com.jeremyfeinstein.slidingmenu.lib.SlidingMenu xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/slidingmenumain"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorSetting">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/headerLayout"
            android:layout_width="match_parent"
            android:layout_height="150dp">

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitStart"
                android:background="@color/colorSetting"
                android:src="@drawable/tab_header" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/tabBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/item_btn"
                android:textColor="@color/colorWhiteHalfTransient"
                android:text="@string/tab_setting"/>

            <Button
                android:id="@+id/sourceBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/item_btn"
                android:textColor="@color/colorWhiteHalfTransient"
                android:text="@string/source_setting"/>

            <Button
                android:id="@+id/likeListBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/item_btn"
                android:textColor="@color/colorWhiteHalfTransient"
                android:text="@string/like_list"/>

            <Button
                android:id="@+id/aboutBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/item_btn"
                android:textColor="@color/colorWhiteHalfTransient"
                android:text="@string/about_setting"/>

        </LinearLayout>

    </LinearLayout>

</com.jeremyfeinstein.slidingmenu.lib.SlidingMenu>